@@ -35,6 +35,7 @@
 #include <math.h>
 #include <string.h>
 #include <stdarg.h>
+#include <locale.h>
 
 #include <libart_lgpl/art_affine.h>
 
@@ -85,7 +86,8 @@ rsvg_start_svg (RsvgHandle *ctx, const xmlChar **atts)
 	
 	double vbox_x = 0, vbox_y = 0, vbox_w = 0, vbox_h = 0;
 	gboolean has_vbox = TRUE;
-	
+	char *oldlocale;
+
 	if (atts != NULL)
 		{
 			for (i = 0; atts[i] != NULL; i += 2)
@@ -104,9 +106,11 @@ rsvg_start_svg (RsvgHandle *ctx, const xmlChar **atts)
 						{
 							/* todo: viewbox can have whitespace and/or comma but we're only likely to see
 							   these 2 combinations */
+							oldlocale = rsvg_c_setlocale ();
 							if (4 == sscanf ((char *)atts[i + 1], " %lf %lf %lf %lf ", &vbox_x, &vbox_y, &vbox_w, &vbox_h) ||
 								4 == sscanf ((char *)atts[i + 1], " %lf , %lf , %lf , %lf ", &vbox_x, &vbox_y, &vbox_w, &vbox_h))
 								has_vbox = TRUE;
+							rsvg_resetlocale (oldlocale);
 						}
 				}
 			
@@ -1111,3 +1115,17 @@ rsvg_handle_free (RsvgHandle *handle)
 	g_free (handle);
 }
 
+char *
+rsvg_c_setlocale (void)
+{
+	return g_strdup (setlocale (LC_NUMERIC, "C"));
+}
+
+void
+rsvg_resetlocale (char * locale)
+{
+	if (locale) {
+		setlocale (LC_NUMERIC, locale);
+		g_free (locale);
+	}
+}
